--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,3 +1,6 @@
 ---
 - name: "Render the tripleo_{{ myservice}} role."
   include_tasks: tripleo_myservice.yml
+
+- name: "Render the {{ myservice }}-container-ansible.yaml template."
+  include_tasks: tht_myservice.yml
