--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,14 @@
 ---
+- set_fact:
+    tripleo_myservice_dir: "{{ output_dir }}/tripleo_{{ myservice }}/"
+    tht_template_output_dir: "{{output_dir}}/"
+    myservice_titlecase: "{{ myservice|title }}"
+    deploy_stages:
+      - host_prep_tasks
+      - external_deploy_tasks
+      - deploy_steps_tasks
+      - fast_forward_upgrade_tasks
+
 - name: "Render the tripleo_{{ myservice}} role."
   include_tasks: tripleo_myservice.yml
 
