--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,15 +1,27 @@
 ---
-- set_fact:
+- name: "Set facts"
+  set_fact:
     tripleo_myservice_dir: "{{ output_dir }}/tripleo_{{ myservice }}/"
-    tht_template_output_dir: "{{output_dir}}/"
+    tht_template_output_dir: "{{ output_dir }}/"
     myservice_titlecase: "{{ myservice|title }}"
     deploy_stages:
       - host_prep_tasks
       - external_deploy_tasks
       - deploy_steps_tasks
       - fast_forward_upgrade_tasks
+    #tht_input: ~/tripleo-ansible-deployment/tripleo-heat-templates/deployment/metrics/collectd-container-puppet.yaml
+    tht_input: ''
 
-- name: "Render the tripleo_{{ myservice}} role."
+- name: "Parse existing tht template"
+  block:
+    - shell: |
+        cat {{ tht_input }}
+      register: heat_template
+    - set_fact:
+        tht: "{{ heat_template.stdout | from_yaml }}"
+  when: tht_input != ''
+
+- name: "Render the tripleo_{{ myservice }} role."
   include_tasks: tripleo_myservice.yml
 
 - name: "Render the {{ myservice }}-container-ansible.yaml template."
